tests/neg-inline-trait/disallow-type-in-inline-trait.scala
inline trait Foo:
    type Bar // error
